make sure overflow x is hidden

--- a/css/beast.scss
+++ b/css/beast.scss
@@ -7,12 +7,11 @@
 
 
 html{
-	font-family: sans-serif;
+	font-family: bit, karla, 'Helvetica Neue', helvetica, sans-serif;
 }
 
 body{
 	margin: 0;
-	font-family: bit, karla, 'Helvetica Neue', helvetica, sans-serif;
 	-webkit-font-smoothing: antialiased;
 	vertical-align: baseline;
 	width: 100%;
@@ -115,32 +114,6 @@ h1{
 }
 
 
-.cloud1{
-	position: fixed;
-	top: 40px;
-	margin-left: -30%;
-	width: 250px;
-	height: 200px;
-	background: transparent url(../img/cloud1.png) no-repeat left top;
-	overflow: hidden;
-	-webkit-animation: 'cloud' 30s infinite linear;
-	@include vendorize(transform, translate3d(0px, 0px, 0));
-	z-index: -1;
-}
-
-.cloud2{
-	position: fixed;
-	top: 180px;
-	margin-left: -30%;
-	width: 250px;
-	height: 200px;
-	background: transparent url(../img/cloud2.png) no-repeat left top;
-	overflow: hidden;
-	-webkit-animation: 'cloudtwo' 35s infinite linear;
-	@include vendorize(transform, translate3d(0px, 0px, 0));
-	z-index: -1;
-}
-
 
 
 .content{
@@ -148,6 +121,7 @@ h1{
 	width: 100%;
 	height: 100%;
 	overflow: auto;
+	overflow-x: hidden !important;
 	top: 0;
 	left: 0;
 	color: white;
